// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser prefix unary expressions parses consecutive unary '-' 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Unary {
      "operator": Object {
        "isReserved": false,
        "kind": "Minus",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "-",
      },
      "right": Unary {
        "operator": Object {
          "isReserved": false,
          "kind": "Minus",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "text": "-",
        },
        "right": Unary {
          "operator": Object {
            "isReserved": false,
            "kind": "Minus",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "-",
          },
          "right": Unary {
            "operator": Object {
              "isReserved": false,
              "kind": "Minus",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "-",
            },
            "right": Unary {
              "operator": Object {
                "isReserved": false,
                "kind": "Minus",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "-",
              },
              "right": Literal {
                "_location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "value": Int32 {
                  "kind": 4,
                  "value": 5,
                },
              },
            },
          },
        },
      },
    },
  },
]
`;

exports[`parser prefix unary expressions parses consecutive unary 'not' 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Unary {
      "operator": Object {
        "isReserved": true,
        "kind": "Not",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "not",
      },
      "right": Unary {
        "operator": Object {
          "isReserved": true,
          "kind": "Not",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "text": "not",
        },
        "right": Unary {
          "operator": Object {
            "isReserved": true,
            "kind": "Not",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "not",
          },
          "right": Unary {
            "operator": Object {
              "isReserved": true,
              "kind": "Not",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "not",
            },
            "right": Unary {
              "operator": Object {
                "isReserved": true,
                "kind": "Not",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "not",
              },
              "right": Literal {
                "_location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "value": BrsBoolean {
                  "kind": 2,
                  "value": true,
                },
              },
            },
          },
        },
      },
    },
  },
]
`;

exports[`parser prefix unary expressions parses unary '-' 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Unary {
      "operator": Object {
        "isReserved": false,
        "kind": "Minus",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "-",
      },
      "right": Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "kind": 4,
          "value": 5,
        },
      },
    },
  },
]
`;

exports[`parser prefix unary expressions parses unary 'not' 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Unary {
      "operator": Object {
        "isReserved": true,
        "kind": "Not",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "not",
      },
      "right": Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "value": BrsBoolean {
          "kind": 2,
          "value": true,
        },
      },
    },
  },
]
`;
